--- a/Index.html
+++ b/Index.html
@@ -879,9 +879,10 @@
 
     <script>
     // Configuration
-    const GITHUB_USER = 'YOUR_USERNAME';
-    const GITHUB_REPO = 'YOUR_REPO';
-    const GITHUB_BRANCH = 'main';
+   // Configuration
+const GITHUB_USER = 'Monkevrr';
+const GITHUB_REPO = 'Unbg';
+const GITHUB_BRANCH = 'main';
     const COVER_URL = 'https://cdn.jsdelivr.net/gh/' + GITHUB_USER + '/' + GITHUB_REPO + '@' + GITHUB_BRANCH + '/covers';
     
     // Games data - Load from JSON
