--- a/Index.html
+++ b/Index.html
@@ -883,7 +883,9 @@
 const GITHUB_USER = 'Monkevrr';
 const GITHUB_REPO = 'Unbg';
 const GITHUB_BRANCH = 'main';
-    const COVER_URL = 'https://cdn.jsdelivr.net/gh/' + GITHUB_USER + '/' + GITHUB_REPO + '@' + GITHUB_BRANCH + '/covers';
+const COVER_REPO = 'covsw';  // Separate repository for covers
+const COVER_URL = 'https://cdn.jsdelivr.net/gh/' + GITHUB_USER + '/' + COVER_REPO + '@main';
+```
     
     // Games data - Load from JSON
     const GAMES_JSON = [
