--- a/Index.html
+++ b/Index.html
@@ -5478,7 +5478,32 @@
     "url": "godzilla-daikaiju-battle-royale.html",
     "author": "AWM Studio Productions LLC",
     "special": ["flash"]
-  }
+  },
+ {
+    "id": 642,
+    "name": "Into Space 3",
+    "cover": `${COVER_URL}/SPACE3.png`,
+    "url": "Into Space 3.html",
+    "author": "AWM Studio Productions LLC",
+    "special": ["flash"]
+  },
+  {
+    "id": 643,
+    "name": "Into Space 2",
+    "cover": `${COVER_URL}/SPACE2.jpg`,
+    "url": "Into Space 2.html",
+    "author": "AWM Studio Productions LLC",
+    "special": ["flash"]
+  },
+  {
+    "id": 644,
+    "name": "Into Space",
+    "cover": `${COVER_URL}/gointospace1.PNG`,
+    "url": "Into Space.html",
+    "author": "AWM Studio Productions LLC",
+    "special": ["flash"]
+  }   
+       
 ];
 
     let games = [];
